'npm start' starts a local http server for development

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "PhantAuth User Example",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "http-server --cors -c-1"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/phantauth/phantauth-feedback/issues"
   },
-  "homepage": "https://github.com/phantauth/phantauth-sample-user#readme"
+  "homepage": "https://github.com/phantauth/phantauth-sample-user#readme",
+  "dependencies": {
+    "http-server": "^0.11.1"
+  }
 }
